--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="footer">
         <br>
-        <p>Copyright @BEM 2024</p>
+        <p>Copyright @BEM STIKep PPNI Jawa Barat 2024</p>
     </div>
 </body>
 </html>
