--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br>
         <a href="" class="d">Lainnya</a>
         <br>
-        <a href="" class="e">Kontak</a>
+        <a href="wa.me/089531298042" class="e">Kontak</a>
     </div>
 </body>
 </html>
