--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br>
         <a href="" class="d">Lainnya</a>
         <br>
-        <a href="https://api.whatsapp.com/send/?phone=6289531298042&text&type=phone_number&app_absent=0" class="e">Kontak</a>
+        <a href="stikeppnijabarbem@gmail.com" class="e">Kontak</a>
     </div>
 </body>
 </html>
